_sass/main.scss
@import "reset";
@import url('https://fonts.googleapis.com/css?family=Roboto');

/////////////
/* GLOBALZ */
/////////////

$font-stack: 'Roboto', Helvetica, sans-serif;
$base: #2A2D33;
$tehlulz: #343840;
$basecomp: #FFF4E0;
$inactive: #E5DCCA;
$links: #DA727E;
$highlight: #00ADB5;
$dates: #9FCBCC;

@mixin box-sizing($property) {
  -webkit-box-sizing: $property;
     -moz-box-sizing: $property;
          box-sizing: $property;
}
%ui-shadow {
  box-shadow : 0 1px 2px rgba(0, 0, 0, 0.50), 0 1px 3px rgba(0, 0, 0, 0.46);
}
%text-shadow {
  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.50), 0 1px 3px rgba(0, 0, 0, 0.46);
}
%content-base {
  display: flex;
  flex-flow: column nowrap;
  min-height: calc(100vh - 72px);
  padding: 15px 10px 15px 0;
  h1 {
    margin: 0;
    span {
      color: $highlight;
      @extend %text-shadow;
    } //color
  }
}

* {
  @include box-sizing(border-box);
} // everythings a border box
html {
  font-family: $font-stack;
  background-color: $base;
  color: $basecomp;
} // font family / theme colors

////////////////////
/* Code Blocks Yo */
////////////////////

pre.highlight {
  max-width: 800px;
  max-height: 250px;
  padding: 1vmin;

  overflow-x: scroll;

  box-shadow: 0 1px 2px black, 0 1px 3px black;
  border-radius: 3px;
}

//////////////////////
/* The Actual Page */
/////////////////////

body {
  display: flex;
  flex-flow: column nowrap;
  
  margin-left: 40px;
  a {
    transition: all .2s;

    text-decoration: none;
    color: $links;
    &:hover {
      @extend %ui-shadow;
      color: $base;
      background-color: $links;
    }
  } // set link colors
} // body is a flex column with a left-marg 40px
@media all and (max-width: 500px) {
  body {
    margin-left: 0;
  }
} // reset left-marg 40px desktop theme for mobile
@media all and (max-width: 800px) {
  body {
    margin-left: 0;
  }
} // same-ish

nav {
  box-shadow: 0 1px 0 $basecomp;
  ul {
    display: flex;
    flex-flow: row nowrap;
    justify-content: flex-start;
    margin: 0;
    li {
      a {
        position: relative;
        display: block;
        padding: 15px 5px;
        margin: 0 5px;

        font-weight: 900;
        text-transform: uppercase;
        text-decoration: none;
        &:after,&:before {
          transition: all .5s;
        }
        &:hover {
          @extend %text-shadow;
          box-shadow: none;
          background-color: transparent;
        }
        &.current {
          color: $highlight;
          box-shadow: 0px 1px 0px $highlight;
        } // Colors & highlight Underline
        &.not-current {
          color: $inactive;
          &:hover {
            color: $basecomp;
            &:after {
              width: 100%;
            }
          }
          &:after {
            position: absolute;
            bottom: -1px;
            left: 0;
            right: 0;
            margin: auto;
            width: 0%;
            content: '.';
            color: transparent;
            text-shadow: none;
            background: $highlight;
            height: 1px;
          }
        }
      }
    }
  }
}
@media all and (max-width: 500px) {
  nav {
    ul {
      justify-content: center;
    }
  }
}
@media all and (max-width: 800px) {
  nav {
    ul {
      justify-content: center;
    }
  }
}

div#base-content {
  @extend %content-base;
  ul#blog-list {
    margin: 5vh 0 0;
    max-width: 900px;
    li {
      margin: 0 0 3vh 0;
      padding: 0 25px 10px 10px;
      position: relative;
      z-index: 1;

      transition: all 0.3s ease-out;
      border-left: 1px solid $basecomp;
      &::before {
        content: "";
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        background: linear-gradient(to right, rgba(42,45,51,1), rgba(42,45,51,0));
        z-index: -1;
      }
      &:hover {
        border-left: 1px solid $highlight;
        background: $tehlulz;
      }
      &:last-child{
        margin: 0;
        padding-bottom: 0;
      }
      h2 {
        text-transform: capitalize;
        display: inline-block;
        margin: 0;
      }
      p.date {
        display: inline-block;
        padding: 5px;

        color: $dates;
        border-left: 1px dotted $basecomp;
      }
      p {
        margin: 0 auto;
      }
    }
  }
}
@media all and (max-width: 500px) {
  div#base-content {
    min-height: 0;
    padding-left: 10px;
    h1 {
      text-align: center;
    }
    ul#blog-list {
      margin-top: 3vh;
      li {
        border: 0vw;
        padding-left: 0;
        &:hover {
          border-left: none;
        }
        h2 {
          display: block;
          //padding-left: 10px;
        }
        p.date {
          display: block;
          border: 0ch;
          padding: 0px;
        }
      }
    }
  }
}
@media all and (max-width: 800px) {
  div#base-content {
    min-height: 0;
    padding-left: 10px;
    h1 {
      text-align: center;
    }
    ul#blog-list li {
      border: 0;
      padding-left: 0;
      &:hover {
        border-left: none;
      }
    }
  }
}

footer {
  padding: 5px 0 0 0;
  
  font-size: 8px;
  text-align: center;
  background-color: $base;
  box-shadow: 0 -1px 0 $basecomp;
  p {
    margin: 0;
  }
  span {
    padding: 6px 0 0 0;
    transition: all 0.5s ease;
    &:hover {
      box-shadow: 0 -1px 0 $highlight;
    }
    a {
      &:hover {
        background-color: transparent;
        box-shadow: none;
        color: $links;
      }
    }
  }
}

////////////////
/* ABOUT PAGE */
////////////////

div#base-content {
  div#about-me {
    display: flex;
    flex-flow: row;
    justify-content: space-between;
    p.about-me {
      max-width: 65vw;
      margin: 0;
    }
  }
  img#selfie {
    margin: 0 auto;

    @extend %ui-shadow;
    border: 1px solid $links;
    border-radius: 3px;
  }
  div.findme {
    width: 500px;
    margin: auto auto 0;
    ul {
      margin: 0;

      @extend %text-shadow;
      border: 2px solid $links;
      border-radius: 3px;
      li {
        text-align: center;

        background-color: $base;
        &:hover {
          transition-duration: 0.3s;
          background-color: $tehlulz;
        }
        a {
          display: block;
          padding: 10px;

          color: $basecomp;
          &:hover {
            background-color: transparent;
            box-shadow: none;
          }
        }
      }
    }
  }
}
@media all and (max-width: 500px) {
  div#base-content {
    div#about-me {
      flex-flow: row wrap-reverse;
      p.about-me {
        max-width: 97vw;
        margin: 0 0 3vh;
      }
    }
    img#selfie {
      margin: 3vh auto;
    }
    div.findme {
      width: 300px;
      ul {
        li {
          border-top: 1px solid $tehlulz;
          &:last-child {
            border-bottom: 1px solid $tehlulz;
          }
        }
      }
    }
  }
}
@media all and (max-width: 800px) {
  div#base-content {
    div#about-me {
      flex-flow: row wrap-reverse;
      p.about-me {
        max-width: 97vw;
        margin: 0 0 3vh;
      }
    }
    img#selfie {
      margin: 3vh auto;
    }
    div.findme {
      ul {
        li {
          border-top: 1px solid $tehlulz;
          &:last-child {
            border-bottom: 1px solid $tehlulz;
          }
        }
      }
    }
  }
}

///////////////
/* POST PAGE */
///////////////

div#post-content {
  @extend %content-base;
  h1#post-title {
    text-transform: capitalize;
  }
  p#post-date {
    margin: 0 0 3vh 0;
    color: $dates;
  
    padding: 3px 0;
  }
  p {
    margin: 5px 0;
  }
  img.img-responsive {
    display: block;
    margin: auto;
    width: 100%;
    max-width: 50%;
    height: auto;
  }
}
@media all and (max-width: 500px) {
  div#post-content {
    padding: 15px 0;
    p#post-date {
      display: block;
      text-align: center;
    }
    img.img-responsive {
      max-width: 100%;
    }
  }
}
@media all and (max-width: 800px) {
  div#post-content {
    padding: 15px 10px;
    h1#post-title {
      text-align: center;
    }
    p#post-date {
      display: block;
      text-align: center;
    }
    img.img-responsive {
      max-width: 100%;
    }
  }
}

